# datasets-llama-index

./: .gitignore  README.md  demo.py  pyproject.toml
src/datasets_llama_index/: __init__.py  datasets_handler.py
traces/: data_4d0dd0bb-d043-4018-8132-b660328241fc.json  data_63c192be-53ea-4c78-b0b4-751ca92506bd.json
